reduce requests to locationiq and added shorter series id (public_code)
